# petgraph-etna

./: .gitignore  BUGS.html  BUGS.md  Cargo.toml  TASKS.md  etna.toml  progress.jsonl
checkpoints/: candidates.json  classified.json  docs.json  fixes.json  injected_draft.json  manual_mutations.json  mutations.json  new_mutation_batch_2026-03-23.json  property_sweep_property_regressions.json  property_sweep_quickcheck.json  ranked.json  report.json  tests.json  variant_validation_manual.json  variant_validation_raw.json
crates/etna_runner/: Cargo.toml
crates/petgraph/src/: csr.rs  etna.rs  graphmap.rs  lib.rs  quickcheck.rs  unionfind.rs
crates/petgraph/src/algo/: astar.rs  dominators.rs  floyd_warshall.rs  isomorphism.rs  simple_paths.rs  spfa.rs
crates/petgraph/src/algo/maximum_flow/: ford_fulkerson.rs
crates/petgraph/src/algo/scc/: kosaraju_scc.rs  tarjan_scc.rs
crates/petgraph/src/graph_impl/: mod.rs
crates/petgraph/src/graph_impl/stable_graph/: mod.rs
crates/petgraph/src/visit/: filter.rs  traversal.rs  undirected_adaptor.rs
crates/petgraph/tests/: etna_witnesses.rs  property_regressions.rs
patches/: floyd_warshall_undirected_4c7f18e_1.patch  graphmap_incoming_self_loop_e39f0f9_1.patch  iterative_dfs_order_0fae246_1.patch  stable_graph_node_bound_b87cf17_1.patch
